--- a/Problem1.ipynb
+++ b/Problem1.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,11 @@
     "        self.CPT = {}\n",
     "        self.functions = []\n",
     "        self.function_count = 0\n",
-    "\n",
+    "        self.VE_order = []\n",
+    "    \n",
+    "    def copy_node(self):\n",
+    "        return copy.copy(self.node)\n",
+    "    \n",
     "    def relations(self,var):\n",
     "        pass\n",
     "        \n",
@@ -35,16 +40,20 @@
     "        return False\n",
     "    \n",
     "    def min_degree(self):\n",
-    "        if self.__isEmpty__():\n",
-    "            return None\n",
-    "        min_var = None\n",
-    "        min_val = float('inf')\n",
-    "        for v in self.variables:\n",
-    "            v_count = len(self.node[v].intersection(self.variables))\n",
-    "            if v_count < min_val:\n",
-    "                min_val = v_count\n",
-    "                min_var = v\n",
-    "        return min_var,min_val\n",
+    "        VE_Order = []\n",
+    "        node = self.copy_node()\n",
+    "        while not self.__isEmpty__():\n",
+    "            min_var = None\n",
+    "            min_val = float('inf')\n",
+    "            for v in self.variables:\n",
+    "                v_count = len(node[v].intersection(self.variables))\n",
+    "                if v_count < min_val:\n",
+    "                    min_val = v_count\n",
+    "                    min_var = v\n",
+    "            VE_Order.append(min_var)\n",
+    "            self.remove(min_var, node)\n",
+    "        self.VE_order = VE_Order\n",
+    "        return VE_Order\n",
     "    \n",
     "    def add(self,var): #var is list of variables forming a clique \n",
     "        self.functions.append(var)\n",
@@ -56,31 +65,40 @@
     "#                 print(var,var[:i]+var[i+1:])\n",
     "                self.node[var[i]] = set(var[0:i]+var[i+1:])\n",
     "    \n",
-    "    def remove(self, var):\n",
+    "    def remove(self, var, node):\n",
     "        if self.__isEmpty__():\n",
     "            return False\n",
     "        else:\n",
     "            if var in self.variables:\n",
     "                self.variables.remove(var)\n",
-    "                for adj_node in self.node[var]:\n",
-    "                    self.node[adj_node] = self.node[var].union(self.node[adj_node])-{adj_node}\n",
+    "                for adj_node in node[var]:\n",
+    "                    node[adj_node] = node[var].union(node[adj_node])-{adj_node}\n",
     "            else:\n",
     "                print(var+\" does not exists\")\n",
     "                return False\n",
     "            return True\n",
     "    \n",
     "    def get_fuctions_with_var(self, var):\n",
+    "        var_functions = {} \n",
     "        if self.function_count > 0:\n",
-    "            \n",
-    "        else:\n",
-    "            return False\n",
+    "            for func in self.functions.keys():\n",
+    "                if str(var) in func.split('-'):\n",
+    "                    var_functions[func] = self.functions[func]\n",
+    "            if len(var_functions)>0:\n",
+    "                return var_functions\n",
+    "        print(\"No function for the variable\", var)\n",
+    "        return False\n",
+    "    \n",
     "    def sum_product(self, var):\n",
+    "        var_functions = get_fuctions_with_var(self, var)\n",
+    "        assert var_functions,\"Invalid VE Order\"\n",
+    "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,13 +112,13 @@
     "        else: \n",
     "            return index\n",
     "    if index >= len(lines):\n",
-    "        print(\"Error in file\")\n",
+    "        print(\"Reached end of file\")\n",
     "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,12 +134,7 @@
     "        index = nextIndex(lines, index)\n",
     "        \n",
     "        markov.variable_count = int(lines[index].strip())\n",
-    "#         markov.variables = [x for x in range(markov.variable_count)]\n",
-    "#         self.nodes = {}\n",
-    "#         self.CPT = {}\n",
-    "#         self.functions = []\n",
-    "#         markov. = \n",
-    "        \n",
+    "\n",
     "        # storing cardinality \n",
     "        index = nextIndex(lines, index)\n",
     "        markov.cardianlities = [int(x) for x in lines[index].strip().split()]\n",
@@ -132,20 +145,17 @@
     "        \n",
     "        for function_index in range(markov.function_count):\n",
     "            index = nextIndex(lines, index)\n",
-    "            if not index:\n",
-    "                return None\n",
+    "            assert index,\"invalid file format\"\n",
     "            clique = [int(x) for x in lines[index].strip().split()]\n",
     "            markov.add(clique[1:])\n",
     "        \n",
     "        \n",
     "        for function_index in range(markov.function_count):\n",
     "            index = nextIndex(lines, index)\n",
-    "            if not index:\n",
-    "                return None\n",
+    "            assert index,\"invalid file format\"\n",
     "            count = int(lines[index].strip())\n",
     "            index = nextIndex(lines, index)\n",
-    "            if not index:\n",
-    "                return None\n",
+    "            assert index,\"invalid file format\"\n",
     "            clique = markov.functions[function_index]\n",
     "            clique = '-'.join(str(x) for x in clique)\n",
     "            markov.CPT[clique]= np.asarray([float(x) for x in lines[index].strip().split()])\n",
@@ -159,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,89 +178,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed 0 with degree 2\n",
-      "Removed 2 with degree 2\n",
-      "Removed 6 with degree 2\n",
-      "Removed 8 with degree 2\n",
-      "Removed 1 with degree 3\n",
-      "Removed 3 with degree 3\n",
-      "Removed 4 with degree 2\n",
-      "Removed 5 with degree 1\n",
-      "Removed 7 with degree 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "while True:\n",
-    "    z = mar.min_degree()\n",
-    "    if z:\n",
-    "        var, degree = z \n",
-    "        if mar.remove(var):\n",
-    "            print(\"Removed\",var,\"with degree\",degree)\n",
-    "    else:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'0': array([0.87269, 1.1459 ]),\n",
-       " '1': array([1.0696 , 0.93492]),\n",
-       " '2': array([0.50955, 1.9625 ]),\n",
-       " '3': array([1.3823 , 0.72345]),\n",
-       " '4': array([2.0507 , 0.48763]),\n",
-       " '5': array([0.83542, 1.197  ]),\n",
-       " '6': array([0.40954, 2.4418 ]),\n",
-       " '7': array([2.0889 , 0.47872]),\n",
-       " '8': array([0.49618, 2.0154 ]),\n",
-       " '0-1': array([3.6808e+02, 2.7168e-03, 2.7168e-03, 3.6808e+02]),\n",
-       " '1-2': array([9.3843e+01, 1.0656e-02, 1.0656e-02, 9.3843e+01]),\n",
-       " '3-4': array([1.5148e+03, 6.6016e-04, 6.6016e-04, 1.5148e+03]),\n",
-       " '4-5': array([8.0239e+02, 1.2463e-03, 1.2463e-03, 8.0239e+02]),\n",
-       " '6-7': array([0.39677, 2.5203 , 2.5203 , 0.39677]),\n",
-       " '7-8': array([0.24393, 4.0996 , 4.0996 , 0.24393]),\n",
-       " '0-3': array([6.7306e-04, 1.4858e+03, 1.4858e+03, 6.7306e-04]),\n",
-       " '3-6': array([1.5296e-02, 6.5377e+01, 6.5377e+01, 1.5296e-02]),\n",
-       " '1-4': array([10.748   ,  0.093037,  0.093037, 10.748   ]),\n",
-       " '4-7': array([1.8837e-03, 5.3087e+02, 5.3087e+02, 1.8837e-03]),\n",
-       " '2-5': array([8.2845e-03, 1.2071e+02, 1.2071e+02, 8.2845e-03]),\n",
-       " '5-8': array([4.1451e-04, 2.4125e+03, 2.4125e+03, 4.1451e-04])}"
+       "[0, 2, 6, 8, 1, 3, 4, 5, 7]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mar.__dict__['CPT']"
+    "mar.min_degree()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'variable_count': 9,\n",
+       " 'cardianlities': [2, 2, 2, 2, 2, 2, 2, 2, 2],\n",
+       " 'variables': [],\n",
+       " 'node': {0: {1, 3},\n",
+       "  1: {0, 2, 4},\n",
+       "  2: {1, 5},\n",
+       "  3: {0, 4, 6},\n",
+       "  4: {1, 3, 5, 7},\n",
+       "  5: {2, 4, 8},\n",
+       "  6: {3, 7},\n",
+       "  7: {4, 6, 8},\n",
+       "  8: {5, 7}},\n",
+       " 'CPT': {'0': array([0.87269, 1.1459 ]),\n",
+       "  '1': array([1.0696 , 0.93492]),\n",
+       "  '2': array([0.50955, 1.9625 ]),\n",
+       "  '3': array([1.3823 , 0.72345]),\n",
+       "  '4': array([2.0507 , 0.48763]),\n",
+       "  '5': array([0.83542, 1.197  ]),\n",
+       "  '6': array([0.40954, 2.4418 ]),\n",
+       "  '7': array([2.0889 , 0.47872]),\n",
+       "  '8': array([0.49618, 2.0154 ]),\n",
+       "  '0-1': array([3.6808e+02, 2.7168e-03, 2.7168e-03, 3.6808e+02]),\n",
+       "  '1-2': array([9.3843e+01, 1.0656e-02, 1.0656e-02, 9.3843e+01]),\n",
+       "  '3-4': array([1.5148e+03, 6.6016e-04, 6.6016e-04, 1.5148e+03]),\n",
+       "  '4-5': array([8.0239e+02, 1.2463e-03, 1.2463e-03, 8.0239e+02]),\n",
+       "  '6-7': array([0.39677, 2.5203 , 2.5203 , 0.39677]),\n",
+       "  '7-8': array([0.24393, 4.0996 , 4.0996 , 0.24393]),\n",
+       "  '0-3': array([6.7306e-04, 1.4858e+03, 1.4858e+03, 6.7306e-04]),\n",
+       "  '3-6': array([1.5296e-02, 6.5377e+01, 6.5377e+01, 1.5296e-02]),\n",
+       "  '1-4': array([10.748   ,  0.093037,  0.093037, 10.748   ]),\n",
+       "  '4-7': array([1.8837e-03, 5.3087e+02, 5.3087e+02, 1.8837e-03]),\n",
+       "  '2-5': array([8.2845e-03, 1.2071e+02, 1.2071e+02, 8.2845e-03]),\n",
+       "  '5-8': array([4.1451e-04, 2.4125e+03, 2.4125e+03, 4.1451e-04])},\n",
+       " 'functions': [[0],\n",
+       "  [1],\n",
+       "  [2],\n",
+       "  [3],\n",
+       "  [4],\n",
+       "  [5],\n",
+       "  [6],\n",
+       "  [7],\n",
+       "  [8],\n",
+       "  [0, 1],\n",
+       "  [1, 2],\n",
+       "  [3, 4],\n",
+       "  [4, 5],\n",
+       "  [6, 7],\n",
+       "  [7, 8],\n",
+       "  [0, 3],\n",
+       "  [3, 6],\n",
+       "  [1, 4],\n",
+       "  [4, 7],\n",
+       "  [2, 5],\n",
+       "  [5, 8]],\n",
+       " 'function_count': 21}"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mar.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a = np.zeros(3)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "KeyError",
@@ -277,18 +309,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
+     "ename": "AssertionError",
+     "evalue": "boom",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-152-775a714b50d3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[1;34m\" \\n\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-74fbc30036bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"boom\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: boom"
      ]
     }
    ],
@@ -296,37 +328,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = set([2,1,3,4,5])"
+    "len({})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'set' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-7d814b6ef51f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'set' and 'list'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +366,7 @@
        "'1, 2, 3, 4, 5'"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,6 +374,13 @@
    "source": [
     "', '.join(str(x) for x in a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
