--- a/calc-Partition-func-markovnet/Problem1.ipynb
+++ b/calc-Partition-func-markovnet/Problem1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
     "        self.function_count = 0\n",
     "        self.VE_order = []\n",
     "    \n",
-    "    def copy_node(self):\n",
-    "        return copy.copy(self.node)\n",
+    "#     def copy_node(self):\n",
+    "#         return copy.copy(self.node)\n",
     "    \n",
     "    def relations(self,var):\n",
     "        pass\n",
@@ -41,7 +41,7 @@
     "    \n",
     "    def min_degree(self):\n",
     "        VE_Order = []\n",
-    "        node = self.copy_node()\n",
+    "        node = copy.copy(self.node)\n",
     "        while not self.__isEmpty__():\n",
     "            min_var = None\n",
     "            min_val = float('inf')\n",
@@ -79,13 +79,16 @@
     "            return True\n",
     "    \n",
     "    def get_fuctions_with_var(self, var):\n",
-    "        var_functions = {} \n",
+    "        var_functions = [] \n",
+    "        other_vars = set([])\n",
     "        if self.function_count > 0:\n",
-    "            for func in self.functions.keys():\n",
-    "                if str(var) in func.split('-'):\n",
-    "                    var_functions[func] = self.functions[func]\n",
+    "            for clique in self.functions:\n",
+    "                if var in clique:\n",
+    "#                     clique.remove(var)\n",
+    "                    other_vars = other_vars.union(clique)\n",
+    "                    var_functions.append(clique)\n",
     "            if len(var_functions)>0:\n",
-    "                return var_functions\n",
+    "                return var_functions,other_vars-{var}\n",
     "        print(\"No function for the variable\", var)\n",
     "        return False\n",
     "    \n",
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +190,7 @@
        "[0, 2, 6, 8, 1, 3, 4, 5, 7]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -258,10 +261,11 @@
        "  [4, 7],\n",
        "  [2, 5],\n",
        "  [5, 8]],\n",
-       " 'function_count': 21}"
+       " 'function_count': 21,\n",
+       " 'VE_order': [0, 2, 6, 8, 1, 3, 4, 5, 7]}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,32 +276,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'0'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-1b093ded4be8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmar\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CPT'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'0'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: '0'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0], [0, 1], [0, 3]] {1, 3}\n",
+      "[[2], [1, 2], [2, 5]] {1, 5}\n",
+      "[[6], [6, 7], [3, 6]] {3, 7}\n",
+      "[[8], [7, 8], [5, 8]] {5, 7}\n",
+      "[[1], [0, 1], [1, 2], [1, 4]] {0, 2, 4}\n",
+      "[[3], [3, 4], [0, 3], [3, 6]] {0, 4, 6}\n",
+      "[[4], [3, 4], [4, 5], [1, 4], [4, 7]] {1, 3, 5, 7}\n",
+      "[[5], [4, 5], [2, 5], [5, 8]] {8, 2, 4}\n",
+      "[[7], [6, 7], [7, 8], [4, 7]] {8, 4, 6}\n"
      ]
     }
    ],
    "source": [
-    "mar.__dict__['CPT'].pop('0')"
+    "for var in mar.VE_order:\n",
+    "    var_functions, other_vars = mar.get_fuctions_with_var(var)\n",
+    "    print(var_functions,other_vars)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# mar.__dict__['CPT'].pop('0')"
    ]
   },
   {
@@ -309,21 +322,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "boom",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-74fbc30036bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"boom\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: boom"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -348,11 +349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "a = set()\n",
+    "a.union([1,2])\n"
    ]
   },
   {
